# offer_microservice

./: Dockerfile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 1dbd1ee383a8_.py
app/: main.py
app/api/: __init__.py  calendar.py  deps.py  dummy.py  extrainfo.py  image.py  menuitem.py  offer.py  reservation.py  review.py
app/core/: config.py
app/crud/: __init__.py  crud_calendar.py  crud_extrainfo.py  crud_image.py  crud_menuitem.py  crud_offer.py  crud_reservation.py  crud_review.py
app/db/: base_class.py  init_db.py  session.py
app/models/: __init__.py  calendar.py  extrainfo.py  image.py  menuitem.py  offer.py  reservation.py  review.py
app/schemas/: __init__.py  calendar.py  extrainfo.py  image.py  menuitem.py  offer.py  reservation.py  review.py
