[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
SQLAlchemy = "^2.0.29"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
pyjwt = "^2.8.0"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
